# promptpalette

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
docs/: claude_output.txt  openai_output.txt
promptpalette/: __init__.py  _client.py  _composer.py
promptpalette/src/kb/: kb.py
promptpalette/src/kb/examples/: active-prompting-cot.md  art-automatic-multi-step-reasoning-prompting.md  chain-of-code-prompting.md  chain-of-knowledge-prompting.md  chain-of-note-prompting.md  chain-of-symbol-prompting.md  chain-of-table-prompting.md  chain-of-verification-prompting.md  contrastive-chain-of-thought-prompting.md  cot-prompting.md  guided-tree-of-thought-prompting.md  language-model-few-shot-learners.md  llm-emotional-stimuli-prompting.md  llm-human-level-prompt-engineers.md  program-of-thoughts-prompting.md  react-prompting.md  reasoning-via-abstraction-prompting.md  rephrase-and-response-prompting.md  scratchpad-prompting.md  self-consistency-cot-prompting.md  structured-chain-of-thought-code-generation-prompting.md  tree-of-thought-problem-solving-prompting.md  zero-shot-chain-of-thought-reasoning-prompting.md
promptpalette/src/kb/knowledgebase/: active-prompting-cot.md  art-automatic-multi-step-reasoning-prompting.md  chain-of-code-prompting.md  chain-of-knowledge-prompting.md  (+19 more)
promptpalette/src/llm/: base.py  claude.py  openai.py
promptpalette/src/picker/: __init__.py  picker.py  prompt.py  schema.py
promptpalette/src/writer/: prompt.py  writer.py
tests/: test_claude.py  test_composer.py  test_llm_factory.py  test_openai.py
