[tool.poetry]
name = "promptpalette"
version = "0.2.0"
description = ""
authors = ["vatsalsaglani <saglanivatsal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.7.0"
claudetools = "^1.0.2"
openai = {extras = ["azure"], version = "^1.41.0"}
anthropic = {extras = ["bedrock"], version = "^0.34.0"}
groq = "^0.9.0"
transformers = "^4.44.0"
tqdm = "^4.66.5"
httpx = "^0.27.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


include = [
    "promptpalette/src/kb/knowledgebase/*.md",
    "promptpalette/src/kb/examples/*.md"
]